--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required (VERSION 2.8)
 project(Neutrino)
 
 find_package(ROOT)
+find_package(Boost)
 add_library(libDelphes SHARED IMPORTED)
 
 add_executable (neutrino main.cpp)
