--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required (VERSION 2.8)
 project(Neutrino)
 
 set (CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -mtune=native -Ofast -Wall -Wextra -Wpedantic -Wfatal-errors")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -mtune=native -Ofast -Wall -Wextra -Wpedantic -Wfatal-errors -Wno-language-extension-token")
 
 find_package(ROOT)
 find_package(Boost COMPONENTS system filesystem REQUIRED)
@@ -23,5 +23,5 @@ target_link_libraries(CMS14 Delphes ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 add_executable (LHCb main-lhcb.cpp)
 target_link_libraries(LHCb Delphes ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 
-add_executable (test test.cpp)
-target_link_libraries(test Delphes ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+add_executable (Test main-test.cpp)
+target_link_libraries(Test Delphes ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
