--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,5 +23,8 @@ target_link_libraries(CMS14 Delphes ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 add_executable (LHCb main-lhcb.cpp)
 target_link_libraries(LHCb Delphes ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 
+add_executable (Distance main-test.cpp)
+target_link_libraries(Distance Delphes ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+
 add_executable (Test main-test.cpp)
 target_link_libraries(Test Delphes ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
