looking for bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,3 +37,6 @@ target_link_libraries(Wboson Delphes ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
 
 add_executable (Leading main-lead.cpp)
 target_link_libraries(Leading Delphes ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
+
+add_executable (HNL main-HNL.cpp)
+target_link_libraries(HNL Delphes ${ROOT_LIBRARIES} ${Boost_LIBRARIES})
