--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,44 +23,44 @@ add_library(libDelphes SHARED IMPORTED)
 
 set(libs ${Boost_LIBRARIES} ${ROOT_LIBRARIES})
 
-set(delphes-libs ${libs} Delphes)
+set(delphes-libs ${libs} Delphes ${HepMC3_LIBRARIES})
 
 set(hepmc-libs ${Boost_LIBRARIES} ${HepMC3_LIBRARIES})
 
 set(hepmc-libs-plot ${libs} ${HepMC3_LIBRARIES})
 
-add_executable(CMS13 main-cms-13.cpp)
-target_link_libraries(CMS13 ${delphes-libs})
+# add_executable(CMS13 main-cms-13.cpp)
+# target_link_libraries(CMS13 ${delphes-libs})
+#
+# add_executable(CMS14 main-cms-14.cpp)
+# target_link_libraries(CMS14 ${delphes-libs})
+#
+# add_executable(ATLAS main-atlas.cpp)
+# target_link_libraries(ATLAS ${delphes-libs})
+#
+# add_executable(LHCb main-lhcb.cpp)
+# target_link_libraries(LHCb ${delphes-libs})
+#
+# add_executable(Distance main-distance.cpp)
+# target_link_libraries(Distance ${delphes-libs})
+#
+# add_executable(Test main-test.cpp)
+# target_link_libraries(Test ${delphes-libs})
+#
+# add_executable(Test2 main-ray.cpp)
+# target_link_libraries(Test2 ${delphes-libs})
+#
+# add_executable(Wboson main-W.cpp)
+# target_link_libraries(Wboson ${delphes-libs})
+#
+# add_executable(Leading main-lead.cpp)
+# target_link_libraries(Leading ${delphes-libs})
+#
+# add_executable(HNL main-HNL.cpp)
+# target_link_libraries(HNL ${delphes-libs})
 
-add_executable(CMS14 main-cms-14.cpp)
-target_link_libraries(CMS14 ${delphes-libs})
-
-add_executable(ATLAS main-atlas.cpp)
-target_link_libraries(ATLAS ${delphes-libs})
-
-add_executable(LHCb main-lhcb.cpp)
-target_link_libraries(LHCb ${delphes-libs})
-
-add_executable(Distance main-distance.cpp)
-target_link_libraries(Distance ${delphes-libs})
-
-add_executable(Test main-test.cpp)
-target_link_libraries(Test ${delphes-libs})
-
-add_executable(Test2 main-ray.cpp)
-target_link_libraries(Test2 ${delphes-libs})
-
-add_executable(Wboson main-W.cpp)
-target_link_libraries(Wboson ${delphes-libs})
-
-add_executable(Leading main-lead.cpp)
-target_link_libraries(Leading ${delphes-libs})
-
-add_executable(HNL main-HNL.cpp)
-target_link_libraries(HNL ${delphes-libs})
-
-add_executable(Tau main-tau.cpp)
-target_link_libraries(Tau ${hepmc-libs-plot})
+# add_executable(Tau main-tau.cpp)
+# target_link_libraries(Tau ${hepmc-libs-plot})
 
 add_executable(CMS13-Pythia main-cms-13-pythia.cpp)
 target_link_libraries(CMS13-Pythia ${hepmc-libs})
@@ -74,25 +74,25 @@ target_link_libraries(ATLAS-Pythia ${hepmc-libs})
 add_executable(LHCb-Pythia main-lhcb-pythia.cpp)
 target_link_libraries(LHCb-Pythia ${hepmc-libs})
 
-add_executable(SimpleTest maintest.cpp)
-target_link_libraries(SimpleTest ${libs})
+# add_executable(SimpleTest maintest.cpp)
+# target_link_libraries(SimpleTest ${libs})
+#
+# add_executable(VerticesATLAS main-vertices-atlas.cpp)
+# target_link_libraries(VerticesATLAS ${hepmc-libs-plot})
+#
+# add_executable(VerticesCMS main-vertices-cms.cpp)
+# target_link_libraries(VerticesCMS ${hepmc-libs-plot})
+#
+# add_executable(VerticesLHCb main-vertices-lhcb.cpp)
+# target_link_libraries(VerticesLHCb ${hepmc-libs-plot})
+#
+# add_executable(Conservation main-conservation.cpp)
+# target_link_libraries(Conservation ${hepmc-libs})
 
-add_executable(VerticesATLAS main-vertices-atlas.cpp)
-target_link_libraries(VerticesATLAS ${hepmc-libs-plot})
+# macro(test name file)
+# add_executable(${name} ${file})
+# target_link_libraries(${name} ${hepmc-libs})
+# add_test(NAME ${name} COMMAND ${name})
+# endmacro()
 
-add_executable(VerticesCMS main-vertices-cms.cpp)
-target_link_libraries(VerticesCMS ${hepmc-libs-plot})
-
-add_executable(VerticesLHCb main-vertices-lhcb.cpp)
-target_link_libraries(VerticesLHCb ${hepmc-libs-plot})
-
-add_executable(Conservation main-conservation.cpp)
-target_link_libraries(Conservation ${hepmc-libs})
-
-macro(test name file)
-add_executable(${name} ${file})
-target_link_libraries(${name} ${hepmc-libs})
-add_test(NAME ${name} COMMAND ${name})
-endmacro()
-
-test(detector test.cpp)
+# test(detector test.cpp)
