--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,9 @@ target_link_libraries(Test ${libs})
 #
 add_executable(Wboson main-W.cpp)
 target_link_libraries(Wboson ${hepmc-libs-plot})
+
+add_executable(PhaseSpace main-PS.cpp)
+target_link_libraries(PhaseSpace ${hepmc-libs-plot})
 #
 # add_executable(Leading main-lead.cpp)
 # target_link_libraries(Leading ${delphes-libs})
