--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,13 @@ cmake_minimum_required(VERSION 3.4)
 
 project(Neutrino)
 
+include_directories("/home/jhajer/Development/pythia8243/include")
+LINK_DIRECTORIES("/home/jhajer/Development/pythia8243/lib")
+
 set(graphic OFF)
 
 set(CMAKE_BUILD_TYPE Release)
-#set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -mtune=native -Ofast -Wall -Wextra -Wpedantic -Wfatal-errors -Wno-language-extension-token -pthread -fPIC")
 
@@ -66,6 +69,9 @@ set(hepmc-libs ${boost-libs} ${HepMC3_LIBRARIES} ${cgal-libs})
 # message(${hepmc-libs})
 #
 set(plot-libs ${hepmc-libs} ${root-libs})
+
+add_executable(MAPP main-pythia.cpp)
+target_link_libraries(MAPP pythia8)
 
 add_executable(Mapp main-mapp-pythia.cpp)
 target_link_libraries(Mapp ${hepmc-libs})
