--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,8 +77,23 @@ set(plot-libs ${hepmc-libs} ${root-libs})
 
 # add_library(pythia-test ResonanceWidths.cpp ThreeBodyWidth.cpp)
 
-add_executable(MAPP main-pythia.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp)
-target_link_libraries(MAPP pythia8 HepMC ${boost-libs})
+add_executable(write-BRs main-write-BRs.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp)
+target_link_libraries(write-BRs pythia8 HepMC ${boost-libs})
+
+add_executable(write-hepmc main-write-hepmc.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp)
+target_link_libraries(write-hepmc pythia8 HepMC ${boost-libs})
+
+add_executable(write-hepmcs main-write-hepmcs.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp)
+target_link_libraries(write-hepmcs pythia8 HepMC ${boost-libs})
+
+add_executable(read-hepmc main-read-hepmc.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp)
+target_link_libraries(read-hepmc pythia8 HepMC ${boost-libs})
+
+add_executable(scan-hepmc main-scan-hepmc.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp)
+target_link_libraries(scan-hepmc pythia8 HepMC ${boost-libs})
+
+add_executable(scan-hepmcs main-scan-hepmcs.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp)
+target_link_libraries(scan-hepmcs pythia8 HepMC ${boost-libs})
 
 # add_executable(Mapp main-mapp-pythia.cpp)
 # target_link_libraries(Mapp ${hepmc-libs})
