test sigma on slurm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,8 +77,14 @@ set(plot-libs ${hepmc-libs} ${root-libs})
 
 # add_library(pythia-test ResonanceWidths.cpp ThreeBodyWidth.cpp)
 
-add_executable(sigma main-sigma.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp Sigma.cpp)
-target_link_libraries(sigma pythia8 HepMC ${boost-libs})
+add_executable(calculate-sigma main-calculate-sigma.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp Sigma.cpp)
+target_link_libraries(calculate-sigma pythia8 HepMC ${boost-libs})
+
+add_executable(write-sigma-hepmc main-write-sigma-hepmc.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp Sigma.cpp)
+target_link_libraries(write-sigma-hepmc pythia8 HepMC ${boost-libs})
+
+add_executable(write-sigma-hepmcs main-write-sigma-hepmcs.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp Sigma.cpp)
+target_link_libraries(write-sigma-hepmcs pythia8 HepMC ${boost-libs})
 
 add_executable(write-BRs main-write-BRs.cpp ResonanceWidths.cpp ThreeBodyWidth.cpp Sigma.cpp)
 target_link_libraries(write-BRs pythia8 HepMC ${boost-libs})
